--- a/metafile.html
+++ b/metafile.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <img src="https://vignette.wikia.nocookie.net/gameofthrones/images/d/da/TID_Key_Art.jpg/revision/latest?cb=20151111152545" alt="game of thrones">
-    <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
+    <meta name="keywords" content="GOT,series">
     <meta name="description" content="poster of game of thrones. It is one of the most watched series in the world. Has highest imdb rankinigs">
     <meta http-equiv="refresh" content="30">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="hazlin">
 </head>
 <body>
-
+<h1>Game of thrones</h1>
+<img src="https://vignette.wikia.nocookie.net/gameofthrones/images/d/da/TID_Key_Art.jpg/revision/latest?cb=20151111152545" alt="game of thrones">
 </body>
 </html>
